--- a/templates/form.html
+++ b/templates/form.html
@@ -28,9 +28,10 @@
 	 <button type="submit" class="btn btn-default">Search</button>
     </form>
 	
-	<br>
-	<br>
-	<div id = "tweets_div">tweet_text</div>
+	<br></br>
+	<div id = "total-tweets"></div>
+	<br></br>
+	<div id = "tweets-div"></div>
 	
 </div>
 
