--- a/templates/form.html
+++ b/templates/form.html
@@ -14,8 +14,9 @@
 <body>
 	<div class="column left">
   <div class="centered">
-    <h2>Jane Flex</h2>
-    <p>Some text.</p>
+    <h4>Language Filter</h4>
+    <input type="checkbox" name="english" id="english"> English <br>
+	<input type="checkbox" name="russian" id="ussian" > Russian <br>
   </div>
 </div>
 
@@ -27,10 +28,8 @@
 	   <br>
 	 <button type="submit" class="btn btn-default">Search</button>
     </form>
-	
 	<br></br>
 	<div id = "total-tweets"></div>
-	<br></br>
 	<div id = "tweets-div"></div>
 	
 </div>
