--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -17,18 +17,40 @@
 */
 
 /* text classes */
-.column {
-    float: left;
-    padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+.left{
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
-.left, .right {
-  width: 25%;
+.w3-light-grey{
+height: 100%;
+border:1px;
+background-color: #f1f1f1!important;
+left: 0px;
+margin-left: 0px;
+display:inline-block;
+position:absolute;
+float: left;
+margin-right: 15px;
+width: 15%;
+}
+
+.right {
+  width: 30%;
+  position: absolute;
+  right: 0px;
+  border: 3px solid #73AD21;
+  padding: 10px;
+  margin-right: 20px;
+  display: inline-block;
 }
 
 .middle {
-  width: 50%;
+  width: 70%;
+  padding-left:10px;
+  margin-left: 20%;
+  display: inline-block;
+  position: absolute;
 }
 
 .tweet_user{
@@ -51,4 +73,8 @@
 	color:black;
 	font-weight:bold;
 	font-size:15px;
+}
+.error{
+	color:red;
+	font-size:20px;
 }
