--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -23,16 +23,14 @@
 }
 
 .w3-light-grey{
-height: 100%;
-border:1px;
-background-color: #f1f1f1!important;
-left: 0px;
-margin-left: 0px;
-display:inline-block;
-position:absolute;
-float: left;
-margin-right: 15px;
-width: 15%;
+	background-color: #ccc!important;
+    left: 0px;
+    margin-left: 0px;
+    display: inline-block;
+    position: absolute;
+    float: left;
+    margin-right: 15px;
+    width: 12%;
 }
 
 .right {
