--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -17,38 +17,54 @@
 */
 
 /* text classes */
+html, body {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;   
+            }
+#container {
+                width: inherit;
+                height: inherit;
+                margin: 0;
+                padding: 0;
+            }
+
+
 .left{
   margin-left: 15px;
   margin-right: 15px;
 }
 
-.w3-light-grey{
+.left1{
 	background-color: #ccc!important;
     left: 0px;
     margin-left: 0px;
     display: inline-block;
     position: absolute;
     float: left;
-    margin-right: 15px;
     width: 12%;
+	height: 130%;
 }
 
 .right {
   width: 30%;
   position: absolute;
   right: 0px;
-  border: 3px solid #73AD21;
+  border: 1.5px solid #73AD21;
   padding: 10px;
-  margin-right: 20px;
+  margin-right: 1%;
   display: inline-block;
+height: 130%;
 }
 
 .middle {
-  width: 70%;
-  padding-left:10px;
-  margin-left: 20%;
-  display: inline-block;
-  position: absolute;
+	width: 50%;
+    margin-right: 20%;
+    margin-left: 15%;
+    display: inline-block;
+    position: absolute;
+    height: 100%;
 }
 
 .tweet_user{
@@ -65,6 +81,10 @@
 	color:black;
 	font-size:16px;
 	padding-bottom: 20px;
+}
+
+#tweets-div{
+height:inherit;
 }
 
 #total-tweets{
