added responsive UI

--- a/templates/form.html
+++ b/templates/form.html
@@ -65,9 +65,9 @@
 	   <br>
 	 <button type="submit" class="btn btn-default">Search</button>
     </form>
-	<br></br>
+	<br>
 	<div id = "total-tweets"></div>
-	<div id = "tweets-div"></div>
+	<div id = "tweets-div" onclick="window.open('http://google.pl', '_blank');"></div>
 </div>
 
 <div class="right">
