--- a/templates/form.html
+++ b/templates/form.html
@@ -67,11 +67,18 @@
     </form>
 	<br>
 	<div id = "total-tweets"></div>
-	<div id = "tweets-div" onclick="window.open('http://google.pl', '_blank');"></div>
+	<div id = "tweets-div"></div>
 </div>
 
 <div class="right">
   <div class="centered">
+		<h4>Analyse</h4>
+		<br>
+		<select>
+				<option value="location">location</option>
+				<option value="language">language</option>
+				<option value="topics">topics</option>
+		</select>
     <div id="chartContainer" style="height: inherit; width: 100%;"></div>
   </div>
 </div>
