--- a/templates/form.html
+++ b/templates/form.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Welcome</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="#" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -66,8 +67,11 @@
 	 <button type="submit" class="btn btn-default">Search</button>
     </form>
 	<br>
-	<div id = "total-tweets"></div>
-	<div id = "tweets-div"></div>
+	<div id = "total-tweets"></div> 
+	<br>
+	<!-- <div id = "tweets-div"></div> -->
+	<div id = "tweets-div" onclick="twitterHandle()"></div>
+	
 </div>
 
 <div class="right">
