--- a/templates/form.html
+++ b/templates/form.html
@@ -56,6 +56,13 @@
 				<input type="checkbox" name="language" id="th" onclick="onclickchecker(this)"> Thai <br>	
 			</div>
 		</div>
+
+		<br> <br>
+		<div id="lang-filter" class="left">
+			<div class="centered">
+				<input type="checkbox" name="pseudo"  id="pseudo" onclick="onclickchecker(this)" class="boldCheckbox"> <strong>Pseudo Relevance</strong><br>
+			</div>
+		</div>
 		
 		
 	</div>
