--- a/templates/form.html
+++ b/templates/form.html
@@ -86,7 +86,8 @@
 		<center><h4>Analyse</h4> </center>
 		<center>
 		<select id="mySelect" onchange="updateCharts(this.value)">
-				<option selected="location">Location</option>
+				<option selected="totalTweet">Total Tweets</option>
+				<option value="location">Location</option>
 				<option value="language">Language</option>
 				<option value="topics">Topics</option>
 				<option value="timeSeriesCity">Time Series City</option>
