--- a/templates/form.html
+++ b/templates/form.html
@@ -92,7 +92,7 @@
 				<option value="timeSeriesCity">Time Series City</option>
 				<option value="timeSeriesLanguage">Time Series Language</option>
 				<option value="timeSeriesTopic">Time Series Topic</option>
-				<option value="timeSeriesSentiments">Time Series Sentiments</option>
+				<option value="timeSeriesSentiments">Time Series</option>
 		</select>
 	   </center>
 	   <br>
