--- a/templates/form.html
+++ b/templates/form.html
@@ -6,6 +6,7 @@
 	<link rel="shortcut icon" href="#" />
 	<link rel="shortcut icon" href="#" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="{{ url_for('static', filename='js/jquery.bootpag.min.js') }}"></script>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
@@ -13,7 +14,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="{{ url_for('static', filename='js/form.js') }}"></script>
 	<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
-   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.simplePagination.js')}}"></script>
    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/responsive.css') }}">
     <style>
 
@@ -86,14 +86,17 @@
 		<center><h4>Analyse</h4> </center>
 		<center>
 		<select id="mySelect" onchange="updateCharts(this.value)">
-				<option selected="totalTweet">Total Tweets</option>
-				<option value="location">Location</option>
+				<option selected="location" value="location">Location</option>
 				<option value="language">Language</option>
 				<option value="topics">Topics</option>
 				<option value="timeSeriesCity">Time Series City</option>
 				<option value="timeSeriesLanguage">Time Series Language</option>
 				<option value="timeSeriesTopic">Time Series Topic</option>
 				<option value="timeSeriesSentiments">Time Series</option>
+				<option value="sentiments">Sentiments</option>
+				<option value="hashtags">Word Cloud Hashtags</option>
+				<option value="mentions">Word Cloud Mentions</option>
+				<option value="area">Area Chart</option>
 		</select>
 	   </center>
 	   <br>
