Added hashtags and mentions

--- a/templates/form.html
+++ b/templates/form.html
@@ -94,8 +94,8 @@
 				<option value="timeSeriesTopic">Time Series Topic</option>
 				<option value="timeSeriesSentiments">Time Series</option>
 				<option value="sentiments">Sentiments</option>
-				<option value="hashtags">Word Cloud Hashtags</option>
-				<option value="mentions">Word Cloud Mentions</option>
+				<option value="hashtags">Hashtags</option>
+				<option value="mentions">Mentions</option>
 				<option value="area">Area Chart</option>
 		</select>
 	   </center>
