--- a/templates/form.html
+++ b/templates/form.html
@@ -95,6 +95,9 @@
 				<option value="timeSeriesTopic">Time Series Topic</option>
 				<option value="timeSeriesSentiments">Time Series</option>
 				<option value="sentiments">Sentiments</option>
+				<option value="citysentiments">Sentiments City</option>
+				<option value="languagesentiments">Sentiments Language</option>
+				<option value="topicsentiments">Sentiments Topic</option>
 				<option value="hashtags">Hashtags</option>
 				<option value="mentions">Mentions</option>
 				<option value="area">Area Chart</option>
